compiler/testData/asJava/lightClasses/compilationErrors/ActualTypeAlias.kt
// p.ActualTypeAliasKt
// FIR_COMPARISON
package p

actual typealias B = List<Int>